Modificacion para moviles

--- a/src/app/comp-inicio/comp-inicio.component.html
+++ b/src/app/comp-inicio/comp-inicio.component.html
@@ -1,20 +1,19 @@
   <div class ="grid-container">
     <div id="inicio" class="container-inicio grid-item">
       <div class="row">
-              <h1></h1>
+        <img class ="img-perfil" src="assets/img/perfil.png"/>
               <div class="container-texto">
                   <h3 class="dev texInicio">DESARROLLADOR.</h3>
                   <h1 class="texInicio">ROGGER LINDAO</h1>
                   <h3 class="caveat texInicio">Lo imposible es solo el comienzo...</h3>
               </div>
-              <img class ="img-perfil" src="assets/img/perfil.png"/>
       </div>
       <!--Iconos
 
       Github
       linkeding
       correo
-      CV
+      CV vbcng
       -->
     </div>
   <div class="container-icon grid-item">
