Creacion de hoja de vida

--- a/src/app/comp-inicio/comp-inicio.component.html
+++ b/src/app/comp-inicio/comp-inicio.component.html
@@ -20,8 +20,8 @@
     <div class="icon">
       <a href="https://github.com/r06xd?tab=repositories"><img class="img-icon" src="assets/img/icon/github.svg"></a>
       <a href="https://www.linkedin.com/in/rogger-lindao-b4062a100/"><img class="img-icon" src="assets/img/icon/linkedin.svg"></a>
-      <img class="img-icon" src="assets/img/icon/email.png">
-      <img class="img-icon" src="assets/img/icon/pdf.svg">
+      <a href="/comp-inicio#contactame"><img class="img-icon" src="assets/img/icon/email.png"></a>
+      <a href="assets/documents/Rogger_Lindao_dev.pdf" download="Rogger_Lindao_dev.pdf"><img class="img-icon" src="assets/img/icon/pdf.svg"></a>
     </div>
   </div>
   <div id="quiensoy" class="grid-item">
