--- a/src/app/comp-inicio/comp-inicio.component.html
+++ b/src/app/comp-inicio/comp-inicio.component.html
@@ -3,7 +3,7 @@
       <div class="row">
         <img class ="img-perfil" src="assets/img/perfil.png"/>
               <div class="container-texto">
-                  <h3 class="dev texInicio">DESARROLLADOR.</h3>
+                  <h3 class="dev texInicio">DESARROLLADOR</h3>
                   <h1 class="texInicio">ROGGER LINDAO</h1>
                   <h3 class="caveat texInicio">Lo imposible es solo el comienzo...</h3>
               </div>
@@ -27,7 +27,7 @@
   <div id="quiensoy" class="grid-item">
     <div class="container-presentacion">
       <div class="presentacion">
-        <h1 class ="texto-presentacion">QUIEN SOY?</h1>
+        <h1 class ="texto-presentacion">QUIÉN SOY?</h1>
         <p class ="texto-presentacion">¡Hola! Soy Rogger Lindao, desarrollador con experiencia en .NET, Python, HTML, CSS, JavaScript, microservicios y SQL Server. Me especializo en crear soluciones innovadoras y escalables. Estoy siempre en busca de nuevos desafíos para aplicar mis conocimientos y contribuir al éxito del equipo. ¡Encantado de conocerte!</p>
       </div>
       <img class="img-icon-presentacion item-presentacion3" src="assets/img/icon/devIcon.svg">
