--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -1,36 +1,8 @@
+* {
+  font-family: 'Ubuntu', sans-serif;
+}
 .container {
   width: 100%;
   height: 100%;
   background: linear-gradient(90deg,#21425c,#131731);
   }
-
-  /* TAMANIO PANTALLA */
-
- /*Escritorio*/
-@media (min-width: 1199.98px)  {
-
-}
-/*Fin Escritorio*/
-
-/*Tablet*/
-/*Portrait*/
-@media (min-width: 576px) and (max-width: 991.98px) and (orientation:portrait) {
-
-}
-
-/*landscape*/
-@media (min0-width: 991.98px) and (max-width: 1199.98px)and (orientation:landscape) {
-
-}
-/*fin tablet*/
-
-/*movil*/
-/*Portrait*/
-/*Default*/
-@media (max-width: 575.98px)and (orientation:portrait) {
-}
-/*landscape*/
-@media (min-width: 576px) and (max-width: 991.98px) and (orientation:landscape) {
-
-}
-/*fin movil*/
