--- a/src/app/comp-menu/comp-menu.component.html
+++ b/src/app/comp-menu/comp-menu.component.html
@@ -5,6 +5,7 @@
     <span class="line"></span>
     <span class="line"></span>
   </div>
+  <div class="back" [class.active]="menuActive" (click)="toggleMenu()"></div>
   <div class="sidebar" [class.active]="menuActive">
     <ul>
       <li><a href="/comp-inicio#index">INICIO</a></li>
