--- a/src/app/comp-menu/comp-menu.component.scss
+++ b/src/app/comp-menu/comp-menu.component.scss
@@ -97,13 +97,30 @@
   left: -70%;
   width: 70%;
   height: 100vh;
-  background: #333;
+  background: #07385b58;
+  backdrop-filter: blur(5px);
   z-index: 1;
   transition: all 0.3s ease;
   display: flex;
   flex-direction: column;
   text-align: center;
   text-size-adjust: 100%;
+}
+.back{
+  //background: red;
+  position: fixed;
+  top: 0;
+  left: -100%;
+  width: 100%;
+  height: 100vh;
+  //backdrop-filter: blur(5px);
+  z-index: 1;
+  transition: all 0.3s ease;
+  display: flex;
+  flex-direction: column;
+  text-align: center;
+  text-size-adjust: 100%;
+  opacity: 100%;
 }
 
 .sidebar ul {
@@ -116,6 +133,10 @@
   padding: 1rem 0;
 }
 
+.sidebar ul li :hover{
+  background: #07385bc5;
+}
+
 .sidebar ul li a {
   color: #fff;
   text-decoration: none;
@@ -123,7 +144,8 @@
   display: block;
 }
 
-.sidebar.active {
+.sidebar.active,
+.back.active  {
   left: 0;
 }
 
