Correccion de colores menu para moviles

--- a/src/app/comp-menu/comp-menu.component.scss
+++ b/src/app/comp-menu/comp-menu.component.scss
@@ -138,7 +138,7 @@
   background: #07385bc5;
 }
 
-.sidebar ul li a {
+.sidebar ul li p {
   color: #fff;
   text-decoration: none;
   font-size: 1.2rem;
